applications/external-dns/cloudflare/controlplane/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-dns-cloudflare-allow-egress
  namespace: external-dns
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-cloudflare
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-dns-cloudflare-allow-ingress
  namespace: external-dns
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-cloudflare
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: http
